<resources>
    <string name="app_name">BookShare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BookShare</string>
    <string name="nav_header_subtitle">"You are not done with a book until you pass it to another reader"</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_signup">Sign Up</string>
    <string name="menu_my_books">My Books</string>
    <string name="menu_wishlist">Wishlist</string>

    <string name="home_second">Home Second</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="book_delete_title">"Book Delete"</string>
    <string name="book_delete_message">"Do you want to delete the selected Book"</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="book_add_fragment_title">"Add New Book"</string>
    <string name="book_detail_title">"Book Details"</string>
    <string name="new_book_add">Add</string>
    <string name="close_book_details">Exit</string>
    <string name="new_book_title">Title</string>
    <string name="new_book_category">Category</string>
    <string name="new_book_author">Author</string>
    <string name="new_book_isbn">ISBN</string>
    <string name="new_book_notes">Notes</string>
    <string name="new_book_condition">Condition</string>
    <string name="new_book_price">Price</string>
    <string name="new_book_published_year">"Published Year"</string>
    <string name="new_book_country">"Published Country"</string>

    <string-array name="book_category_arrays">
        <item>Education</item>
        <item>Fantasy</item>
        <item>Adventure</item>
        <item>Romance</item>
        <item>Mystery</item>
        <item>Horror</item>
        <item>Thriller</item>
        <item>"Science Fiction"</item>
        <item>Cooking</item>
        <item>Art</item>
        <item>Development</item>
        <item>Motivational</item>
        <item>Health</item>
        <item>History</item>
        <item>Travel</item>
        <item>Children’s</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
