<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_books"
            android:title="@string/menu_my_books" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_wishlist"
            android:title="@string/menu_wishlist" />
    </group>
    <item android:title="User Options">
        <menu>
            <item
                android:id="@+id/nav_signup"
                android:icon="@drawable/ic_signup"
                android:title="@string/menu_signup" />
            <item
                android:id="@+id/nav_user_profile"
                android:icon="@drawable/ic_profile"
                android:title="Profile" />
            <item
                android:id="@+id/nav_user_update"
                android:icon="@drawable/ic_settings"
                android:title="Update" />
        </menu>
    </item>
</menu>
