<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.home.AddNewBookDialogFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_add_fragment_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/new_book_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/new_book_category">

        <TextView
            android:id="@+id/new_book_category_txtview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/new_book_category"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/new_book_category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/book_category_arrays"
            android:prompt="@string/new_book_category" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/new_book_author">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/new_book_isbn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_book_isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/new_book_published_year">

        <TextView
            android:id="@+id/new_book_published_year_txtview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/new_book_published_year"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/new_book_published_year_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/new_book_published_year" />

    </com.google.android.material.textfield.TextInputLayout>

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:hint="@string/new_book_country">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/new_book_country"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/new_book_price"
        android:inputType="number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_book_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/new_book_notes">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_book_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="3"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAddNewBook"
        android:layout_width="180dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/ButtonBackground"
        android:text="Add"
        android:theme="@style/FormButton"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</LinearLayout>